--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <h3>Sistema para rifas.</h3>
                         <span>2021/10/01</span>
                         <p>Un pequeño sistema para registrar participantes y escoger automaticamente al ganador dada una fecha de juego.</p>
-                        <button class="btn-1">Ir a la página web<img src="/assets/a_go.svg" alt=""></button><br>
+                        <button class="btn-1" id="btn-4a">Ir a la página web<img src="/assets/a_go.svg" alt=""></button><br>
                     </div>
                 </div>
             </div>
