--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="wrap">
                 <div class="element">
-                    <img src="assets/_html.png" alt="" srcset="" width="100vw"><br>
+                    <img src="https://github.com/LisoProgrammer/portfolio/blob/gh-pages/assets/_html.png" alt="" srcset="" width="100vw"><br>
                     <h3>HTML5</h3>
                 </div>
                 <div class="element">
