--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="c">
         <header>
             <div class="m">
-                <img src="assets/marca_lisandro.svg" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
+                <img src="https://pressly.000webhostapp.com/sourcest/brand(2).png" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
             </div>
             <div class="flex c_c">
                 <div class="cab">
@@ -86,31 +86,31 @@
             </div>
             <div class="wrap">
                 <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_html.png" alt="" srcset="" width="100vw"><br>
+                    <img src="https://pressly.000webhostapp.com/sourcest/_html.png" alt="HTML5" srcset="" width="100vw"><br>
                     <h3>HTML5</h3>
                 </div>
                 <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_css.png" alt="" srcset="" width="100vw"><br>
+                    <img src="https://pressly.000webhostapp.com/sourcest/_css.png" alt="CSS3" srcset="" width="100vw"><br>
                     <h3>CSS3</h3>
                 </div>
                 <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_js.png" alt="" srcset="" width="100vw"><br>
+                    <img src="https://pressly.000webhostapp.com/sourcest/_js.png" alt="JAVASCRIPT" srcset="" width="100vw"><br>
                     <h3>JS</h3>
                 </div>
                 <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_php.svg" alt="" srcset="" width="160vw"><br>
+                    <img src="https://pressly.000webhostapp.com/sourcest/_php.svg" alt="PHP" srcset="" width="160vw"><br>
                     <h3>PHP</h3>
                 </div>
                 <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_mysqlpng.png" alt="" srcset="" width="110vw"><br>
+                    <img src="https://pressly.000webhostapp.com/sourcest/_mysqlpng.png" alt="MYSQL" srcset="" width="110vw"><br>
                     <h3>MYSQL</h3>
                 </div>
                 <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_ajax.png" alt="" srcset="" width="150vw"><br>
+                    <img src="https://pressly.000webhostapp.com/sourcest/_ajax.png" alt="AJAX" srcset="" width="150vw"><br>
                     <h3>AJAX</h3>
                 </div>
                 <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_json.png" alt="" srcset="" width="100vw"><br>
+                    <img src="https://pressly.000webhostapp.com/sourcest/_json.png" alt="JSON" srcset="" width="100vw"><br>
                     <h3>JSON</h3>
                 </div>
             </div>
@@ -123,14 +123,14 @@
             <div class="wrap" style="max-width: 900px;">
                 <div class="element term">
                     <div class="img">
-                        <img src="./assets/b_1ken.png" alt="" class="imgterm">
+                        <img src="https://pressly.000webhostapp.com/sourcest/brand(2).png" alt="Marca_lisandro_zapata" class="imgterm">
                     </div>
                     <div class="des">
                         <h3>Bookend</h3>
                         <span>2021/05/06</span>
 
                         <p>El proyecto Bookend tiene como finalidad el fortalecimiento del sector educativo y el laboral de Colombia mediante software y apoyo físico.</p>
-                        <button class="btn-1">Ir a la página web<img src="/assets/a_go.svg" alt=""></button><br>
+                        <button class="btn-1">Ir a la página web<img src="https://pressly.000webhostapp.com/sourcest/a_go.svg" alt=""></button><br>
                     </div>
 
                 </div>
@@ -142,7 +142,7 @@
                         <h3>Sim. de pruebas Icfes</h3>
                         <span>2021/05/06</span>
                         <p>El sim. de pruebas Icfes hace parte de Bookend y de su proyecto Bookendtest. Su objetivo es preparar a los estudiantes del país, para las pruebas Saber. Es aún un prototipo.</p>
-                        <button class="btn-1">Ir a la página web<img src="/assets/a_go.svg" alt=""></button><br>
+                        <button class="btn-1">Ir a la página web<img src="https://pressly.000webhostapp.com/sourcest/a_go.svg" alt=""></button><br>
                     </div>
                 </div>
                 <div class="element term">
@@ -153,7 +153,7 @@
                         <h3>Practica con PHP y MySQL</h3>
                         <span>2021/09/01</span>
                         <p>La creación de una aplicación web desarrollada por el proyecto Bookend, dirigida en torno al fortalecimiento del sector laboral. Es aún un prototipo.</p>
-                        <button class="btn-1">Ir a la página web<img src="/assets/a_go.svg" alt=""></button><br>
+                        <button class="btn-1">Ir a la página web<img src="https://pressly.000webhostapp.com/sourcest/a_go.svg" alt=""></button><br>
                     </div>
                 </div>
                 <div class="element term">
@@ -164,7 +164,7 @@
                         <h3>Sistema para rifas.</h3>
                         <span>2021/10/01</span>
                         <p>Un pequeño sistema para registrar participantes y escoger automaticamente al ganador dada una fecha de juego.</p>
-                        <button class="btn-1" id="btn-4a">Ir a la página web<img src="/assets/a_go.svg" alt=""></button><br>
+                        <button class="btn-1" id="btn-4a">Ir a la página web<img src="https://pressly.000webhostapp.com/sourcest/a_go.svg" alt=""></button><br>
                     </div>
                 </div>
             </div>
