--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="wrap" style="max-width: 900px;">
                 <div class="element term">
                     <div class="img">
-                        <img src="https://pressly.000webhostapp.com/sourcest/brand(2).png" alt="Marca_lisandro_zapata" class="imgterm">
+                        <img src="./assets/b_1ken" alt="Marca_lisandro_zapata" class="imgterm">
                     </div>
                     <div class="des">
                         <h3>Bookend</h3>
