--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-     <link rel="shortcut icon" href="https://pressly.000webhostapp.com/sourcest/brand.png">
+     <link rel="shortcut icon" href="https://pressly.000webhostapp.com/sources/brand.png">
     <link rel="stylesheet" href="css/index.css">
 
     <title>Lisandro Zapata | Portafolio</title>
