--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
      <link rel="shortcut icon" href="https://pressly.000webhostapp.com/sourcest/brand.png">
     <link rel="stylesheet" href="css/index.css">
-
+    <meta name="description" content="Este portafolio web contiene todo lo referente a Lisandro Zapata a nivel laboral.">
     <title>Lisandro Zapata | Portafolio</title>
 </head>
 
@@ -173,16 +173,17 @@
         <div class="c-form" id="t4">
             <div class="bdrp">
                 <h1>Contáctame</h1><br>
-                <form action="" method="post" class="form-1">
-                    <h2>Nombre:</h2>
+                <form action="" method="post" class="form-1" id="contact-form">
+                    <h2 class="title-sp">Nombre:</h2>
                     <input type="text" name="name" class="input" placeholder="Nombre...">
-                    <h2>Correo electrónico:</h2>
+                    <h2 class="title-sp">Correo electrónico:</h2>
                     <input type="email" name="email" class="input" placeholder="Correo electrónico...">
-                    <h2>Mensaje:</h2>
+                    <h2 class="title-sp">Mensaje:</h2>
                     <textarea name="msg" cols="50" rows="5" style="width: 100%;" class="input" placeholder="Mensaje..."></textarea>
                     <span id="sgt"></span><br>
                     <button type="submit" id="btn_s" class="btn-1">Enviar</button>
-                </form><br></div>
+                </form><br>
+            </div>
 
         </div>
         <button id="b_top">Volver arriba ▲</button>
