--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <h3>JS</h3>
                 </div>
                 <div class="element">
-                    <img src="./assets/_php.svg" alt="" srcset="" width="160vw"><br>
+                    <img src="assets/_php.svg" alt="" srcset="" width="160vw"><br>
                     <h3>PHP</h3>
                 </div>
                 <div class="element">
