--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="c">
         <header>
             <div class="m">
-                <img src="assets/marca_lisandro.svg" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
+                <img src="https://pressly.000webhostapp.com/sourcest/brand(2).png" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
             </div>
             <div class="flex c_c">
                 <div class="cab">
@@ -208,7 +208,7 @@
         <div class="c-menu closed" id="sub-menu">
             <div class="sub-h">
                 <div class="m">
-                    <img src="assets/marca_lisandro.svg" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
+                    <img src="https://pressly.000webhostapp.com/sourcest/brand(2).png" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
                 </div>
                 <div class="flex">
                     <div>
