--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <div>
                         <span>Carácteres: <span id="le">0</span>/150</span>
                     </div>
-                    <textarea name="msg" cols="50" rows="5" style="width: 100%;" class="input" placeholder="Mensaje...  Solo se aceptan 150 carácteres como máximo."></textarea>
+                    <textarea name="msg" cols="50" rows="5" style="width: 100%;" class="input" placeholder="Mensaje..."></textarea>
                     <span id="sgt"></span><br>
                     <button type="submit" id="btn_s" class="btn-1">Enviar</button>
                 </form><br>
