--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="https://pressly.000webhostapp.com/sourcest/brand.png">
     <link rel="stylesheet" href="css/index.css">
     <meta name="description" content="Este portafolio web contiene todo lo referente a Lisandro Zapata a nivel laboral.">
+    <meta property="og:image" content="assets/Yo.jpg">
     <title>Lisandro Zapata | Portafolio</title>
 </head>
 
@@ -15,9 +16,9 @@
     <div class="c">
         <header>
             <div class="m">
-                <img src="https://pressly.000webhostapp.com/sourcest/brand(2).png" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
+                <img src="assets/marca_lisandro.svg" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
             </div>
-            <div class="flex c_c">
+            <div class="flex c_c" role="navigation">
                 <div class="cab">
                     <button id="btn_m" class="btn-5">Menú<img src="assets/m.svg" alt="menu" width="20px"></button></div>
                 <div class="ab">
@@ -87,6 +88,41 @@
             </div>
             <div class="wrap">
                 <div class="element">
+                    <img src="assets/_html.png" alt="" srcset="" width="100vw"><br>
+                    <h3>HTML5</h3>
+                </div>
+                <div class="element">
+                    <img src="assets/_css.png" alt="" srcset="" width="100vw"><br>
+                    <h3>CSS3</h3>
+                </div>
+                <div class="element">
+                    <img src="assets/_js.png" alt="" srcset="" width="100vw"><br>
+                    <h3>JS</h3>
+                </div>
+                <div class="element">
+                    <img src="assets/_php.svg" alt="" srcset="" width="160vw"><br>
+                    <h3>PHP</h3>
+                </div>
+                <div class="element">
+                    <img src="assets/_mysqlpng.png" alt="" srcset="" width="110vw"><br>
+                    <h3>MYSQL</h3>
+                </div>
+                <div class="element">
+                    <img src="assets/_ajax.png" alt="" srcset="" width="150vw"><br>
+                    <h3>AJAX</h3>
+                </div>
+                <div class="element">
+                    <img src="assets/_json.png" alt="" srcset="" width="100vw"><br>
+                    <h3>JSON</h3>
+                </div>
+            </div>
+        </div>
+        <!--<div class="skills">
+            <div class="title-5">
+                <h1 class="t-i"> Las tecnologías que manejo</h1>
+            </div>
+            <div class="wrap">
+                <div class="element">
                     <img src="https://pressly.000webhostapp.com/sourcest/_html.png" alt="HTML5" srcset="" width="100vw"><br>
                     <h3>HTML5</h3>
                 </div>
@@ -115,8 +151,7 @@
                     <h3>JSON</h3>
                 </div>
             </div>
-        </div>
-
+        </div>-->
 
         <div class="skills" id="t3">
             <div class="title-5">
@@ -125,42 +160,42 @@
             <div class="wrap" style="max-width: 900px;">
                 <div class="element term">
                     <div class="img">
-                        <img src="./assets/b_1ken.png" alt="" class="imgterm">
+                        <img src="assets/b_1ken.png" alt="" class="imgterm">
                     </div>
                     <div class="des">
                         <h3>Bookend</h3>
                         <span>2021/05/06</span>
 
                         <p>El proyecto Bookend tiene como finalidad el fortalecimiento del sector educativo y el laboral de Colombia mediante software y apoyo físico.</p>
-                        <button class="btn-1">Ir a la página web<img src="/assets/a_go.svg" alt=""></button><br>
+                        <button class="btn-1">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
                     </div>
 
                 </div>
                 <div class="element term">
                     <div class="img">
-                        <img src="./assets/s_6m.png" alt="" class="imgterm">
+                        <img src="assets/s_6m.png" alt="" class="imgterm">
                     </div>
                     <div class="des">
                         <h3>Sim. de pruebas Icfes</h3>
                         <span>2021/05/06</span>
                         <p>El sim. de pruebas Icfes hace parte de Bookend y de su proyecto Bookendtest. Su objetivo es preparar a los estudiantes del país, para las pruebas Saber. Es aún un prototipo.</p>
-                        <button class="btn-1">Ir a la página web<img src="/assets/a_go.svg" alt=""></button><br>
+                        <button class="btn-1">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
                     </div>
                 </div>
                 <div class="element term">
                     <div class="img">
-                        <img src="./assets/bg.png" alt="" class="imgterm">
+                        <img src="assets/bg.png" alt="" class="imgterm">
                     </div>
                     <div class="des">
                         <h3>Practica con PHP y MySQL</h3>
                         <span>2021/09/01</span>
                         <p>La creación de una aplicación web desarrollada por el proyecto Bookend, dirigida en torno al fortalecimiento del sector laboral. Es aún un prototipo.</p>
-                        <button class="btn-1">Ir a la página web<img src="/assets/a_go.svg" alt=""></button><br>
+                        <button class="btn-1">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
                     </div>
                 </div>
                 <div class="element term">
                     <div class="img">
-                        <img src="./assets/gb.png" alt="" class="imgterm">
+                        <img src="assets/gb.png" alt="" class="imgterm">
                     </div>
                     <div class="des">
                         <h3>Sistema para rifas.</h3>
@@ -171,13 +206,13 @@
                 </div>
                 <div class="element term">
                     <div class="img">
-                        <img src="./assets/dadoo.png" alt="" class="imgterm">
+                        <img src="assets/dadoo.png" alt="" class="imgterm">
                     </div>
                     <div class="des">
                         <h3>Practica con HTML, CSS y JS</h3>
                         <span>2021/04/23</span>
                         <p>La virtualización de los típicos dados físicos, corresponde a la primera fase de mi aprendizaje.</p>
-                        <button class="btn-1" id="btn-5a">Ir a la página web<img src="/assets/a_go.svg" alt=""></button><br>
+                        <button class="btn-1" id="btn-5a">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
                     </div>
                 </div>
             </div>
@@ -192,7 +227,7 @@
                     <input type="email" name="email" class="input" placeholder="Correo electrónico...">
                     <h2 class="title-sp">Mensaje:</h2>
                     <div>
-                        <span>Carácteres: <span id="le">0</span>/150</span>
+                        <span>Carácteres: <span id="le">0</span>/200</span>
                     </div>
                     <textarea name="msg" cols="50" rows="5" style="width: 100%;" class="input" placeholder="Mensaje..."></textarea>
                     <span id="sgt"></span><br>
@@ -204,11 +239,11 @@
         <button id="b_top">Volver arriba ▲</button>
         <footer>copyrigths reserved 2021© Lisandro Zapata</footer><br><br><br><br><br>
     </div>
-    <div class="menu closed" id="menu">
+    <div class="menu closed" id="menu" role="menu">
         <div class="c-menu closed" id="sub-menu">
             <div class="sub-h">
                 <div class="m">
-                    <img src="https://pressly.000webhostapp.com/sourcest/brand(2).png" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
+                    <img src="assets/marca_lisandro.svg" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
                 </div>
                 <div class="flex">
                     <div>
@@ -220,6 +255,9 @@
             </div>
             <nav>
                 <ul>
+                    <li>
+                        <h4>Menú</h4>
+                    </li>
                     <li>
                         <a href="#t1" class="a-sp">¿Quién soy?</a>
                     </li>
@@ -237,8 +275,8 @@
         </div>
 
     </div>
-    <script src="js/typed.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/typed.js" async></script>
+    <script src="js/index.js" async></script>
 </body>
 
 </html>
