--- a/index.html
+++ b/index.html
@@ -88,31 +88,31 @@
             </div>
             <div class="wrap">
                 <div class="element">
-                    <img src="assets/_html.png" alt="" srcset="" width="100vw"><br>
+                    <img src="assets/html.png" alt="HTML" srcset="" width="100vw"><br>
                     <h3>HTML5</h3>
                 </div>
                 <div class="element">
-                    <img src="assets/_css.png" alt="" srcset="" width="100vw"><br>
+                    <img src="assets/css.png" alt="CSS" srcset="" width="100vw"><br>
                     <h3>CSS3</h3>
                 </div>
                 <div class="element">
-                    <img src="assets/_js.png" alt="" srcset="" width="100vw"><br>
+                    <img src="assets/js.png" alt="JS" srcset="" width="100vw"><br>
                     <h3>JS</h3>
                 </div>
                 <div class="element">
-                    <img src="assets/_php.svg" alt="" srcset="" width="160vw"><br>
+                    <img src="assets/php.svg" alt="PHP" srcset="" width="160vw"><br>
                     <h3>PHP</h3>
                 </div>
                 <div class="element">
-                    <img src="assets/_mysqlpng.png" alt="" srcset="" width="110vw"><br>
+                    <img src="assets/mysql.png" alt="MYSQL" srcset="" width="110vw"><br>
                     <h3>MYSQL</h3>
                 </div>
                 <div class="element">
-                    <img src="assets/_ajax.png" alt="" srcset="" width="150vw"><br>
+                    <img src="assets/ajax.png" alt="AJAX" srcset="" width="150vw"><br>
                     <h3>AJAX</h3>
                 </div>
                 <div class="element">
-                    <img src="assets/_json.png" alt="" srcset="" width="100vw"><br>
+                    <img src="assets/json.png" alt="JSON" srcset="" width="100vw"><br>
                     <h3>JSON</h3>
                 </div>
             </div>
