--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
         </div>
 
     </div>
-    <script src="js/typed.js" async></script>
-    <script src="js/index.js" async></script>
+    <script src="js/typed.js" defer></script>
+    <script src="js/index.js" defer></script>
 </body>
 
 </html>
