--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="c">
         <header>
             <div class="m">
-                <img src="assets/marca_lisandro.svg" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
+                <img src="assets/brand.png" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
             </div>
             <div class="flex c_c" role="navigation">
                 <div class="cab">
@@ -117,41 +117,6 @@
                 </div>
             </div>
         </div>
-        <!--<div class="skills">
-            <div class="title-5">
-                <h1 class="t-i"> Las tecnologías que manejo</h1>
-            </div>
-            <div class="wrap">
-                <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_html.png" alt="HTML5" srcset="" width="100vw"><br>
-                    <h3>HTML5</h3>
-                </div>
-                <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_css.png" alt="CSS3" srcset="" width="100vw"><br>
-                    <h3>CSS3</h3>
-                </div>
-                <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_js.png" alt="JAVASCRIPT" srcset="" width="100vw"><br>
-                    <h3>JS</h3>
-                </div>
-                <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_php.svg" alt="PHP" srcset="" width="160vw"><br>
-                    <h3>PHP</h3>
-                </div>
-                <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_mysqlpng.png" alt="MYSQL" srcset="" width="110vw"><br>
-                    <h3>MYSQL</h3>
-                </div>
-                <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_ajax.png" alt="AJAX" srcset="" width="150vw"><br>
-                    <h3>AJAX</h3>
-                </div>
-                <div class="element">
-                    <img src="https://pressly.000webhostapp.com/sourcest/_json.png" alt="JSON" srcset="" width="100vw"><br>
-                    <h3>JSON</h3>
-                </div>
-            </div>
-        </div>-->
 
         <div class="skills" id="t3">
             <div class="title-5">
@@ -243,7 +208,7 @@
         <div class="c-menu closed" id="sub-menu">
             <div class="sub-h">
                 <div class="m">
-                    <img src="assets/marca_lisandro.svg" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
+                    <img src="assets/brand.png" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
                 </div>
                 <div class="flex">
                     <div>
