--- a/assets/dadoo/index.html
+++ b/assets/dadoo/index.html
@@ -48,7 +48,7 @@
     </div>
 
 
-    <button id="btn">Tirar dados <br> (Enter o Space)</button>
+    <button id="btn">Tirar dados <br></button>
     <!--<div class="n" id="int">Intento(s): 0</div>-->
     <div class="n">Dadoo V1.5</div>
 
