--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h2>Cargando contenido...</h2>
         </div>
 
+
     </div>
     <div class="c">
         <header>
@@ -30,16 +31,16 @@
                 <div class="cab">
                     <button id="btn_m" class="btn-5"><img src="assets/m.svg" alt="menu" width="20px"></button></div>
                 <div class="ab">
-                    <a href="#t1" class="a-sp t1_a">Sobre mí</a>
+                    <a href="#t1" class="a-sp t1">Sobre mí</a>
                 </div>
                 <div class="ab">
-                    <a href="#t2" class="a-sp t2_a">Mis Habilidades</a>
+                    <a href="#t2" class="a-sp t2">Mis Habilidades</a>
                 </div>
                 <div class="ab">
-                    <a href="#t3" class="a-sp t3_a">Mis proyectos</a>
+                    <a href="#t3" class="a-sp t3">Mis proyectos</a>
                 </div>
                 <div class="ab">
-                    <a href="#t4" class="a-sp t4_a">Contáctame</a>
+                    <a href="#t4" class="a-sp t4">Contáctame</a>
                 </div>
 
             </div>
@@ -76,7 +77,7 @@
         </div>
         <div class="tut" id="t1">
             <div class="par">
-                <div class="title-5 t1">
+                <div class="title-5">
                     <h1 class="t-i">Sobre mí</h1>
                 </div>
                 <p>Mi nombre es Lisandro Zapata. Nací el 23 de febrero de 2005, es decir, tengo <span id="ag"></span> años. Soy técnico en sistemas y desarrollador web. Me identifico como una persona autodidacta, responsable y ordenada.</p>
@@ -85,8 +86,8 @@
         </div>
         <div class="tut" id="t2">
             <div class="par">
-                <div class="title-5 t2">
-                    <h1 class="t-i">Habilidades profesionales</h1>
+                <div class="title-5">
+                    <h1 class="t-i">Mis habilidades Pro</h1>
                 </div>
                 <p>Como técnico en sistemas, manejo herramientas ofimáticas y soy capaz de montar redes informáticas y de realizar mantenimiento preventivo y correctivo en equipos de cómputo. Además, como desarrollador web, manejo las tecnologías que se
                     presentan a continuación. </p>
@@ -133,134 +134,65 @@
 
 
         <div class="skills" id="t3">
-            <div class="title-5 t3">
+            <div class="title-5">
                 <h1 class="t-i">Mis proyectos</h1>
             </div>
-            <div class="wrap">
-                <div class="element term">
-                    <div class="img">
-                        <img src="assets/b_1ken.png" alt="" class="imgterm">
-                    </div>
-                    <div class="des">
-                        <div class="content-title">
-                            <h2>Bookend
-                                <div class="time">2021¬05</div>
-                            </h2>
-                        </div>
 
-                        <p>El proyecto Bookend tiene como finalidad el fortalecimiento del sector educativo y el laboral de Colombia mediante software y apoyo físico.</p>
-                        <button class="btn-1">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
-                    </div>
-
-                </div>
-                <div class="element term">
-                    <div class="img">
-                        <img src="assets/s_6m.png" alt="" class="imgterm">
-                    </div>
-                    <div class="des">
-                        <div class="content-title">
-                            <h2>
-                                Sim. de pruebas Icfes
-                                <div class="time">2021¬05</div>
-                            </h2>
-                        </div>
-
-
-                        <p>El sim. de pruebas Icfes hace parte de Bookend y de su proyecto Bookendtest. Su objetivo es preparar a los estudiantes del país, para las pruebas Saber. Es aún un prototipo.</p>
-                        <button class="btn-1">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
-                    </div>
-                </div>
-                <div class="element term">
-                    <div class="img">
-                        <img src="assets/bg.png" alt="" class="imgterm">
-                    </div>
-                    <div class="des">
-                        <div class="content-title">
-                            <h2>Practica con PHP y MySQL
-                                <div class="time">2021¬09</div>
-                            </h2>
-                        </div>
-
-
-                        <p>La creación de una aplicación web desarrollada por el proyecto Bookend, dirigida en torno al fortalecimiento del sector laboral. Es aún un prototipo.</p>
-                        <button class="btn-1">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
-                    </div>
-                </div>
-                <div class="element term">
-                    <div class="img">
-                        <img src="assets/gb.png" alt="" class="imgterm">
-                    </div>
-                    <div class="des">
-                        <div class="content-title">
-                            <h2>Talotick
-                                <div class="time">2021¬10</div>
-                            </h2>
-                        </div>
-                        <p>Un pequeño sistema para registrar participantes y escoger automaticamente al ganador dada una fecha de juego.</p>
-                        <button class="btn-1" id="btn-4a">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
-                    </div>
-                </div>
-                <div class="element term">
-                    <div class="img">
-                        <img src="assets/dadoo.png" alt="" class="imgterm">
-                    </div>
-                    <div class="des">
-                        <div class="content-title">
-                            <h2>Dadoo
-                                <div class="time">2021¬04</div>
-                            </h2>
-                        </div>
-                        <p>La virtualización de los típicos dados físicos, corresponde a la primera fase de mi aprendizaje.</p>
-                        <button class="btn-1" id="btn-5a">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
-                    </div>
-                </div>
+            <div class="content-slider">
+                <iframe title="slider" src="slider.html" frameborder="0" class="slider"></iframe>
             </div>
-            <br><br><br>
-            
-            <div class="c-form" id="t4">
-                <div class="bdrp" id="bdrp">
-                    <h1>Contáctame</h1><br>
-                    <form action="" method="post" class="form-1" id="contact-form">
-                        <div class="code suggestion">
-                            <h2>Puedes enviar <span id="cont" class="time">3</span> mensajes hoy.</h2>
-                        </div>
-
-
-                        <h2 class="title-sp">Nombre:</h2>
-                        <input type="text" name="name" class="input" placeholder="Nombre...">
-                        <h2 class="title-sp">Correo electrónico:</h2>
-                        <input type="email" name="email" class="input" placeholder="Correo electrónico...">
-                        <div class="flex space-between">
-                            <div>
-                                <h2 class="title-sp">Mensaje:</h2>
-                            </div>
-
-                            <div>
-                                <span><div class="time"><span  id="le">0</span>/200</div>
-                            </span>
-                        </div>
-
-                </div>
-                <textarea name="msg" cols="50" rows="5" style="width: 100%;" class="input" placeholder="Mensaje..."></textarea>
-                <div id="sgt">
-                </div><br>
-                <button type="submit" id="btn_s" class="btn-1">Enviar</button>
-                </form>
+            <div id="app_bookendtest">
+                <h2 class="title-5">Una muestra interactiva</h2>
+                <iframe src="assets/muestra_bookendtest/" id="app_b_test"></iframe>
             </div>
 
         </div>
-        <button id="b_top">Subir ▲</button>
-        <footer>
-            copyrigths reserved © 2022
-            <div class="flex center margin-top-10px">
+        <br><br><br>
 
-                <div>
-                    <img src="assets/brand_white(2).png" alt="" width="30vw">
-                </div>
+        <div class="c-form" id="t4">
+            <div class="bdrp" id="bdrp">
+                <h1>Contáctame</h1><br>
+                <form action="" method="post" class="form-1" id="contact-form">
+                    <div class="code suggestion">
+                        <h2>Puedes enviar <span id="cont" class="time">3</span> mensajes hoy.</h2>
+                    </div>
+
+
+                    <h2 class="title-sp">Nombre:</h2>
+                    <input type="text" name="name" class="input" placeholder="Nombre...">
+                    <h2 class="title-sp">Correo electrónico:</h2>
+                    <input type="email" name="email" class="input" placeholder="Correo electrónico...">
+                    <div class="flex space-between">
+                        <div>
+                            <h2 class="title-sp">Mensaje:</h2>
+                        </div>
+
+                        <div>
+                            <span><div class="time"><span  id="le">0</span>/200</div>
+                        </span>
+                    </div>
 
             </div>
+            <textarea name="msg" cols="50" rows="5" style="width: 100%;" class="input" placeholder="Mensaje..."></textarea>
+            <div id="sgt">
+            </div><br>
+            <button type="submit" id="btn_s" class="btn-1">Enviar</button>
+            </form>
+        </div>
 
-        </footer>
+    </div>
+    <button id="b_top" title="Scroll to top">Subir ▲</button>
+    <footer>
+        copyrigths reserved © 2022
+        <div class="flex center margin-top-10px">
+
+            <div>
+                <img src="assets/brand_white(2).png" alt="" width="30vw">
+            </div>
+
+        </div>
+
+    </footer>
     </div>
     <div class="menu closed" id="menu" role="menu">
         <div class="c-menu closed" id="sub-menu">
@@ -284,16 +216,16 @@
                         <h4>Menú</h4>
                     </li>
                     <li>
-                        <a href="#t1" class="a-sp t1_b">Sobre mí</a>
+                        <a href="#t1" class="a-sp t1">Sobre mí</a>
                     </li>
                     <li>
-                        <a href="#t2" class="a-sp t2_b">Mis Habilidades</a>
+                        <a href="#t2" class="a-sp t2">Mis Habilidades</a>
                     </li>
                     <li>
-                        <a href="#t3" class="a-sp t2_b">Mis Proyectos</a>
+                        <a href="#t3" class="a-sp t3">Mis Proyectos</a>
                     </li>
                     <li>
-                        <a href="#t4" class="a-sp t4_b">
+                        <a href="#t4" class="a-sp t4">
                           Contáctame
                         </a>
                     </li>
