--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/index.css">
     <meta name="description" content="Este portafolio web contiene todo lo referente a Lisandro Zapata a nivel laboral.">
     <meta property="og:image" content="assets/Yo.jpg">
+    <link rel="shortcut icon" href="assets/favicon.svg">
+
     <title>Lisandro Zapata | Portafolio</title>
 </head>
 
