--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <h2 class="title-sp">Nombre:</h2>
                     <input type="text" name="name" class="input" placeholder="Nombre...">
                     <h2 class="title-sp">Correo electrónico:</h2>
-                    <input type="email" name="email" class="input" placeholder="Correo electrónico...">
+                    <input type="email" name="email" class="input" placeholder="Correo electrónico..." required>
                     <div class="flex space-between">
                         <div>
                             <h2 class="title-sp">Mensaje:</h2>
