--- a/index.html
+++ b/index.html
@@ -123,10 +123,14 @@
                     <h2>PHP</h2>
                 </div>
                 <div class="element tc flex column center" id="tc6">
+                    <img src="assets/py.svg" alt="Python" srcset="" width="160vw"><br>
+                    <h2>Python</h2>
+                </div>
+                <div class="element tc flex column center" id="tc7">
                     <img src="assets/mysql.png" alt="MYSQL" srcset="" width="110vw"><br>
                     <h2>MYSQL</h2>
                 </div>
-                <div class="element tc flex column center" id="tc7">
+                <div class="element tc flex column center" id="tc8">
                     <img src="assets/ajax.png" alt="AJAX" srcset="" width="150vw"><br>
                     <h2>AJAX</h2>
                 </div>
