--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <h2>PHP</h2>
                 </div>
                 <div class="element tc flex column center" id="tc6">
-                    <img src="https://www.python.org/static/img/python-logo-large.c36dccadd999.png?1576869008" alt="Python" srcset="" width="160vw"><br>
+                    <img src="https://www.python.org/static/opengraph-icon-200x200.png" alt="Python" srcset="" width="160vw"><br>
                     <h2>Python</h2>
                 </div>
                 <div class="element tc flex column center" id="tc7">
