--- a/slider.html
+++ b/slider.html
@@ -264,13 +264,21 @@
             <a href="#tt1" class="spc-a spc-a-focus">1</a>
             <hr>
             <a href="#tt2" class="spc-a">2</a>
+            
+            <!--
+Se debe ir cambiando los números y id a medida en que se creen proyectos
+            <a href="#tt1" class="spc-a spc-a-focus">1</a>
+            <hr>
+            <a href="#tt2" class="spc-a">2</a>
             <hr>
             <a href="#tt3" class="spc-a">3</a>
             <hr>
             <a href="#tt4" class="spc-a">4</a>
             <hr>
-            <a href="#tt5" class="spc-a">5</a>
+            <a href="#tt5" class="spc-a">5</a>-->
         </div>
+        <!--
+        Se descomentan a medida en qu se creen proyectos
 
         <div class="slider-element term" id="tt1">
 
@@ -287,7 +295,7 @@
                 <button class="btn-1">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
             </div>
 
-        </div>
+        </div>-->
         <div class="slider-element" id="tt2">
 
             <div class="c_img img2"></div>
@@ -302,7 +310,7 @@
                 <p>El sim. de pruebas Icfes hace parte de Bookendtest. Su objetivo es preparar a los estudiantes del país, para las pruebas Saber. Es aún un prototipo.</p>
                 <button class="btn-1">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
             </div>
-
+<!--
         </div>
         <div class="slider-element" id="tt3">
 
@@ -333,10 +341,12 @@
                 </div>
                 <p>Un pequeño sistema para registrar participantes y escoger automaticamente al ganador dada una fecha de juego.</p>
                 <button class="btn-1">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
-            </div>
-
+            </div>--->
+<!--
+Se deben ir cambiando los ids
+-->
         </div>
-        <div class="slider-element" id="tt5">
+        <div class="slider-element" id="tt1">
 
             <div class="c_img img5"></div>
 
