--- a/slider.html
+++ b/slider.html
@@ -307,8 +307,8 @@ Se debe ir cambiando los números y id a medida en que se creen proyectos
                         <div class="time">2021¬05</div>
                     </h2>
                 </div>
-                <p>El sim. de pruebas Icfes hace parte de Bookendtest. Su objetivo es preparar a los estudiantes del país, para las pruebas Saber. Es aún un prototipo.</p>
-                <button class="btn-1">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>
+                <p>El sim. de pruebas Icfes. Su objetivo es preparar a los estudiantes del país, para las pruebas Saber. Es aún un prototipo.</p>
+                <!--<button class="btn-1">Ir a la página web<img src="assets/a_go.svg" alt=""></button><br>-->
             </div>
 <!--
         </div>
@@ -344,9 +344,10 @@ Se debe ir cambiando los números y id a medida en que se creen proyectos
             </div>--->
 <!--
 Se deben ir cambiando los ids
+Colocar adem´s la clase term para que sea visible el elemento del slider
 -->
         </div>
-        <div class="slider-element" id="tt1">
+        <div class="slider-element term" id="tt1">
 
             <div class="c_img img5"></div>
 
