--- a/index.html
+++ b/index.html
@@ -187,7 +187,11 @@
         </div>
 
     </div>
-    <button id="b_top" title="Scroll to top">Subir ▲</button>
+    <button id="b_top flex" title="Scroll to top">Subir 
+        <span class="material-symbols-outlined">
+            pan_tool_alt
+        </span>
+    </button>
     <footer>
         copyrigths reserved © 2022
         <div class="flex center margin-top-10px">
@@ -204,7 +208,7 @@
         <div class="c-menu closed" id="sub-menu">
             <div class="sub-h">
                 <div class="m">
-                    <img src="assets/brand(2).png" alt="Marca_Lisandro_Zapata" width="40vw" id="ic">
+                    <img src="assets/brand(2).png" alt="Brand" width="40vw" id="ic">
                 </div>
                 <div class="flex">
                     <div class="flex center">
