--- a/index.html
+++ b/index.html
@@ -187,11 +187,7 @@
         </div>
 
     </div>
-    <button id="b_top flex" title="Scroll to top">Subir 
-        <span class="material-symbols-outlined">
-            pan_tool_alt
-        </span>
-    </button>
+    <button id="b_top flex" title="Scroll to top">Subir ↑</button>
     <footer>
         copyrigths reserved © 2022
         <div class="flex center margin-top-10px">
