--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
 
     </div>
-    <button id="b_top flex" title="Scroll to top">Subir ↑</button>
+    <button id="b_top" title="Scroll to top">Subir ↑</button>
     <footer>
         copyrigths reserved © 2022
         <div class="flex center margin-top-10px">
