--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                     <h2 class="title-sp">Nombre:</h2>
                     <input type="text" name="name" class="input" placeholder="Nombre...">
-                    <h2 class="title-sp">Correo electrónico:</h2>
+                    <h2 class="title-sp">Correo electrónico o teléfono:</h2>
                     <input type="email" name="email" class="input" placeholder="Correo electrónico..." required>
                     <div class="flex space-between">
                         <div>
